packages/webassemblyjs/test/fixtures/conversions/type-errors/convert_s-f64-i64/module.wast
(module (func (result f64) (f64.convert_s/i64 (i32.const 0))))
